Add Racenote logo and info to Sponsors page

--- a/sponsors.html
+++ b/sponsors.html
@@ -136,21 +136,29 @@
           <p><a class="btn btn-default" href="http://interfaceschool.com" target="_blank" role="button">Visit Website &raquo;</a></p>
         </div>
       </div>
-      <!--new row - two columns-->
+      <!--new row - three columns-->
       <div class="row text-center">
-        <div class="col-md-6">
+        <div class="col-md-4">
         <a href="http://getflywheel.com" target="_blank"><img src="img/sponsors/flywheel.png" alt="Flywheel"></a>
         <h2>Flywheel</h2>
         <p>Flywheel is a WordPress hosting company based in Omaha Nebraska. The Flywheel team provided Scout Books for girls.</p>
         <p><a class="btn btn-default" href="http://getflywheel.com" target="_blank" role="button">Visit Website &raquo;</a></p>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-4">
         <a href="http://aimforbrilliance.org" target="_blank"><img src="img/sponsors/aim-logo.jpg" alt="AIM"></a>
         <h2>AIM</h2>
         <p>AIM is an innovative not-for-profit community organization that grows, connects and inspires the community through technology. AIM Brain Exchange is the sponsored location for Completely Kids GWC club. AIM
         provided space and sponsorship for the 2016 final project demo event for the Omaha Girls Who Code - Milton R. Abrahams Omaha Library Branch Club.</p>
         <p><a class="btn btn-default" href="http://aimforbrilliance.org/" target="_blank" role="button">Visit Website &raquo;</a></p>
+      </div>
+	      
+      <div class="col-md-4">
+        <a href="http://racenote.com/" target="_blank"><img src="img/sponsors/racenote.png" alt="Racenote"></a>
+        <h2>AIM</h2>
+        <p>RaceNote started in 2013 because of our passion in racing and our interest in technology. We realized that by combining both, we could make your race team faster on and off the track.
+	Racenote provides weekly snacks for the Omaha Girls Who Code club at <a href="www.dospace.org/events/girls-who-code" target="_blank">Do Space</a></p>
+        <p><a class="btn btn-default" href="http://racenote.com/" target="_blank" role="button">Visit Website &raquo;</a></p>
       </div>
     </div>
 
