--- a/volunteers.html
+++ b/volunteers.html
@@ -250,6 +250,44 @@
         <div class="clearfix visible-sm-block"></div><!-- responsive clearfix for 2 column wrapping -->
 
         <div class="col-sm-6 col-lg-3">
+		<div class="text-center">
+    			  <img class="img-rounded" src="img/volunteers/julietr.jpg" width="140" height="140">
+    			  <h3>Juliet Rosenthal</h3>
+          	</div>
+          	<div class="bio-container">
+            		<input type="checkbox" class="clamp-toggle" id="clamp-toggle-juliet"/>
+    				<p class="bio ellipsis-container clamped">
+              				<span class="badges badge-instructor"></span>
+              			<label class="ellipsis" for="clamp-toggle-juliet">
+					I began coding as a hobby in 2000. I found that simple games and web development were a 						challenging and fun creative outlet. I had no idea my hobby would spiral out of control and 						become my career.
+					<br /><br/>
+					I have been a professional software engineer since 2007. Throughout my career, I've developed 						huge systems to support the telecommunications, finance, and insurance industries. I am 						fascinated by functional programming languages, artificial intelligence, data structures, and 						algorithms.
+					<br /><br />
+					I've had a long-standing interest in bridging the gender gap in IT, as IT fields (and STEM 						fields more generally) benefit when more women contribute their talents to the community. I 						became involved with GWC to support young women and cultivate their interest in software early 						in life. I look forward to seeing the students grow and develop as they begin their journey 						through programming and software development.
+             			</label>
+            			</p>
+          	</div>
+  	</div>
+	      
+	      	<div class="col-sm-6 col-lg-3">
+		<div class="text-center">
+    			  <img class="img-rounded" src="img/volunteers/lutap.JPG" width="140" height="140">
+    			  <h3>Luta Pleiss</h3>
+          	</div>
+          	<div class="bio-container">
+            		<input type="checkbox" class="clamp-toggle" id="clamp-toggle-luta"/>
+    				<p class="bio ellipsis-container clamped">
+              				<span class="badges badge-ta"></span>
+              			<label class="ellipsis" for="clamp-toggle-luta">
+					I started coding when I was 10 years old on a Texas Instruments TI 99 home computer (Google 						it!).  I always loved coding, but growing up I never considered that it could be a career.  						Instead, I became a math teacher, and after a few years I switched jobs and I am currently a 						software training specialist. I do some coding as part of my job now, and I still code as a 						hobby. I currently have an app on the Apple Store called License Plate Hunt. I wanted to get 						involved with Girls Who Code because we need more women in the technology sector and I want 						girls to realize this can be their career and their calling.
+				</label>
+            			</p>
+          	</div>
+  	</div>
+			</div><!--/row-->
+			
+	      <div class="row">
+	      <div class="col-sm-6 col-lg-3">
           <div class="text-center">
             <img class="img-rounded" src="img/volunteers/asha.jpg" width="140" height="140">
             <h3>Ash Ashokan</h3>
@@ -287,10 +325,10 @@
             </p>
           </div>
         </div>
-      </div><!-- /.row -->
+       <div class="clearfix visible-sm-block"></div><!-- responsive clearfix for 2 column wrapping -->
 
-			<div class="row">
-  			<div class="col-sm-6 col-lg-3">
+			
+  	<div class="col-sm-6 col-lg-3">
           <div class="text-center">
             <img class="img-rounded bio-pic" src="img/volunteers/jenj.jpg">
             <h3>Jen Jost</h3>
@@ -325,10 +363,10 @@
             </p>
           </div>
         </div>
-
-        <div class="clearfix visible-sm-block"></div><!-- responsive clearfix for 2 column wrapping -->
-
-  			<div class="col-sm-6 col-lg-3">
+	</div><!--/row-->
+       
+	<div class="row">
+  	<div class="col-sm-6 col-lg-3">
           <div class="text-center">
     			  <img class="img-rounded" src="img/volunteers/jenb.jpg" width="140" height="140">
     			  <h3>Jennifer Bunge</h3>
@@ -363,7 +401,9 @@
             </p>
           </div>
   			</div>
-      </div><!-- /.row -->
+       <div class="clearfix visible-sm-block"></div><!-- responsive clearfix for 2 column wrapping -->
+			</div><!--/row-->
+
 
 		</div><!-- /.container -->
 
