--- a/sponsors.html
+++ b/sponsors.html
@@ -122,18 +122,14 @@
         <div class="col-md-4">
           <a href="http://omahalibrary.org" target="_blank"><img src="img/sponsors/library.jpeg" alt="Omaha Public Library"></a>
           <h2>Omaha Public Library</h2>
-          <div class="comment more">
-            <p>Omaha Public Library Milton R. Abrahams Branch is the sponsoring location of the first Omaha Girls Who Code Club. The library also generously provides laptops for girls to use for the duration of the program</p>
-          </div>
-          <p><a class="btn btn-default" href="http://omahalibrary.org" target="_blank" role="button">Visit Website` &raquo;</a></p>
+          <p>Omaha Public Library Milton R. Abrahams Branch is the sponsoring location of the first Omaha Girls Who Code Club. The library also generously provides laptops for girls to use for the duration of the program.</p>
+            <p><a class="btn btn-default" href="http://omahalibrary.org" target="_blank" role="button">Visit Website` &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <a href="http://interfaceschool.com" target="_blank"><img src="img/sponsors/interface.png" alt="Interface Web School"></a>
           <h2>Interface Web School</h2>
-          <div class="comment more">
-            <p>Interface Web School is a web developer training school based in Omaha Nebraska. Members of the Interface Web School leadership team donated space and forms access for participant application management.</p>
-          </div>
-          <p><a class="btn btn-default" href="http://interfaceschool.com" target="_blank" role="button">Visit Website &raquo;</a></p>
+          <p>Interface Web School is a web developer training school based in Omaha Nebraska. Members of the Interface Web School leadership team donated space and forms access for participant application management.</p>
+            <p><a class="btn btn-default" href="http://interfaceschool.com" target="_blank" role="button">Visit Website &raquo;</a></p>
         </div>
       </div>
       <!--new row - three columns-->
@@ -155,9 +151,9 @@
 	      
       <div class="col-md-4">
         <a href="http://racenote.com/" target="_blank"><img src="img/sponsors/racenote.png" alt="Racenote"></a>
-        <h2>AIM</h2>
-        <p>RaceNote started in 2013 because of our passion in racing and our interest in technology. We realized that by combining both, we could make your race team faster on and off the track.
-	Racenote provides weekly snacks for the Omaha Girls Who Code club at <a href="www.dospace.org/events/girls-who-code" target="_blank">Do Space</a></p>
+        <h2>RaceNote</h2>
+        <p>RaceNote started in 2013 because of our passion in racing and our interest in technology. We realized that by combining both, we could make your race team faster on and onff the track.
+	Racenote provides weekly snacks for the Omaha Girls Who Code club at <a href="http://www.dospace.org/events/girls-who-code" target="_blank">Do Space</a>.</p>
         <p><a class="btn btn-default" href="http://racenote.com/" target="_blank" role="button">Visit Website &raquo;</a></p>
       </div>
     </div>
