Update single quote to address text display error

--- a/volunteers.html
+++ b/volunteers.html
@@ -412,7 +412,7 @@
     			  	<p class="bio ellipsis-container clamped">
               			<span class="badges badge-ta"></span>
               			<label class="ellipsis" for="clamp-toggle-alyssa">
-					The cheesy story I tell is that I got into web design and development because I wanted the world to be more inclusive and friendly. The real story is that I got into web design because when I was in junior high I didn't want my Top 8 to show on Myspace page, because I didn't want to upset any of my friends. Today I’m a web designer and front-end developer. A lot of what I know about web development is self-taught, but a whole lot more has come from the learning from the people around me. I got involved with Girls Who Code because I want other females to feel included. I want girls to know that they can learn from and teach each other, as well as lean on one another, to accomplish great things.
+					The cheesy story I tell is that I got into web design and development because I wanted the world to be more inclusive and friendly. The real story is that I got into web design because when I was in junior high I didn't want my Top 8 to show on Myspace page, because I didn't want to upset any of my friends. Today I'm a web designer and front-end developer. A lot of what I know about web development is self-taught, but a whole lot more has come from the learning from the people around me. I got involved with Girls Who Code because I want other females to feel included. I want girls to know that they can learn from and teach each other, as well as lean on one another, to accomplish great things.
               			</label>
           
           		</div>
