--- a/volunteers.html
+++ b/volunteers.html
@@ -400,23 +400,41 @@
               </label>
           
           </div>
-  	</div>
-       	<div class="clearfix visible-sm-block"></div><!-- responsive clearfix for 2 column wrapping -->
-		<div class="col-sm-6 col-lg-3">
-          		<div class="text-center">
+  	    </div>
+
+		    <div class="col-sm-6 col-lg-3">
+          <div class="text-center">
     			  <img class="img-rounded" src="img/volunteers/alyssab.jpg" width="140" height="140">
     			  <h3>Alyssa Brunswick</h3>
-          		</div>
-          		<div class="bio-container">
-            			<input type="checkbox" class="clamp-toggle" id="clamp-toggle-alyssa"/>
-    			  	<p class="bio ellipsis-container clamped">
-              			<span class="badges badge-ta"></span>
-              			<label class="ellipsis" for="clamp-toggle-alyssa">
-					The cheesy story I tell is that I got into web design and development because I wanted the world to be more inclusive and friendly. The real story is that I got into web design because when I was in junior high I didn't want my Top 8 to show on Myspace page, because I didn't want to upset any of my friends. Today I'm a web designer and front-end developer. A lot of what I know about web development is self-taught, but a whole lot more has come from the learning from the people around me. I got involved with Girls Who Code because I want other females to feel included. I want girls to know that they can learn from and teach each other, as well as lean on one another, to accomplish great things.
-              			</label>
-          
-          		</div>
-  		</div>
+          </div>
+          <div class="bio-container">
+            <input type="checkbox" class="clamp-toggle" id="clamp-toggle-alyssa"/>
+    			  <p class="bio ellipsis-container clamped">
+              <span class="badges badge-ta"></span>
+              <label class="ellipsis" for="clamp-toggle-alyssa">
+      					The cheesy story I tell is that I got into web design and development because I wanted the world to be more inclusive and friendly. The real story is that I got into web design because when I was in junior high I didn't want my Top 8 to show on Myspace page, because I didn't want to upset any of my friends. Today I'm a web designer and front-end developer. A lot of what I know about web development is self-taught, but a whole lot more has come from the learning from the people around me. I got involved with Girls Who Code because I want other females to feel included. I want girls to know that they can learn from and teach each other, as well as lean on one another, to accomplish great things.
+              </label>
+            </p>
+          </div>
+  		  </div>
+
+        <div class="col-sm-6 col-lg-3">
+          <div class="text-center">
+            <img class="img-rounded" src="img/volunteers/amy_wall.jpg" width="140" height="140">
+            <h3>Amy Wall</h3>
+          </div>
+          <div class="bio-container">
+            <input type="checkbox" class="clamp-toggle" id="clamp-toggle-amy"/>
+            <p class="bio ellipsis-container clamped">
+              <span class="badges badge-ta"></span>
+              <label class="ellipsis" for="clamp-toggle-amy">
+                Amy Wall currently works as a Software Consultant at an Omaha based Software Consulting Agency, Agape Red. She returned to the Omaha area last January to attend Omaha Code School and has since enjoyed becoming involved in the Omaha Tech Community. Prior to returning to Omaha, Amy lived in St. Louis, Missouri and worked as a Project Manager and Content Manager for a local Media Marketing Agency. She received her BA from Saint Louis University with a major in Art History and certificate in Business Administration. Amy strives to bring an interdisciplinary approach to software development that draws upon her experience in marketing, art, and technology.
+              </label>
+            </p>
+          </div>
+        </div>
+
+        <div class="clearfix visible-sm-block"></div><!-- responsive clearfix for 2 column wrapping -->
 		
 	</div><!--/row-->
 
