adds nikki to volunteers page

--- a/volunteers.html
+++ b/volunteers.html
@@ -438,6 +438,8 @@
 		
 	</div><!--/row-->
 
+  <div class="row">
+
     <div class="col-sm-6 col-lg-3">
       <div class="text-center">
         <img class="img-rounded" src="img/volunteers/melinda.jpg" width="140" height="140">
@@ -456,9 +458,23 @@
       </div>
     </div>
 
-  <div class="row">
+    <div class="col-sm-6 col-lg-3">
+      <div class="text-center">
+        <img class="img-rounded" src="img/volunteers/nikki.jpg" width="140" height="140">
+        <h3>Nikki Martin</h3>
+      </div>
+      <div class="bio-container">
+        <input type="checkbox" class="clamp-toggle" id="clamp-toggle-nikki"/>
+        <p class="bio ellipsis-container clamped">
+          <span class="badges badge-ta"></span>
+          <label class="ellipsis" for="clamp-toggle-nikki">
+            I initially discovered my interest in coding in the early 2000's when I discovered I could make pages colorful and pretty on the virtual pets website Neopets. I never pursued this hobby until I decided I to move on from a career path in secondary education, which wasn't working for me. In 2016, I completed Omaha Code School and found my calling in front-end web development. Currently, I use my developer talents at Kiewit, where I am a Web and Digital Development Specialist.
 
-
+            At Girls Who Code, I enjoy mentoring and watching the class solve problems. It makes me really excited they have something like this available to them because I really wish I had! Hopefully, they can use their time spent with us to build interest and confidence that will support them in the future.
+          </label>
+        </p>
+      </div>
+    </div>
 
   </div><!--/row-->
 
