adds rosemary to volunteers page

--- a/volunteers.html
+++ b/volunteers.html
@@ -476,6 +476,22 @@
       </div>
     </div>
 
+    <div class="col-sm-6 col-lg-3">
+      <div class="text-center">
+        <img class="img-rounded" src="img/volunteers/rosemary.jpg" width="140" height="140">
+        <h3>Rosemary Keenan</h3>
+      </div>
+      <div class="bio-container">
+        <input type="checkbox" class="clamp-toggle" id="clamp-toggle-rosemary"/>
+        <p class="bio ellipsis-container clamped">
+          <span class="badges badge-ta"></span>
+          <label class="ellipsis" for="clamp-toggle-rosemary">
+            Rosemary Keenan is a student at UNO and an intern at the Union Pacific call center. She is currently working towards a computer science major and would like to work in web development in the future.
+          </label>
+        </p>
+      </div>
+    </div>
+
   </div><!--/row-->
 
 
