adds jessica to volunteers page

--- a/volunteers.html
+++ b/volunteers.html
@@ -492,6 +492,22 @@
       </div>
     </div>
 
+    <div class="col-sm-6 col-lg-3">
+      <div class="text-center">
+        <img class="img-rounded" src="img/volunteers/jessica.jpg" width="140" height="140">
+        <h3>Jessica Johnson</h3>
+      </div>
+      <div class="bio-container">
+        <input type="checkbox" class="clamp-toggle" id="clamp-toggle-jessica"/>
+        <p class="bio ellipsis-container clamped">
+          <span class="badges badge-organizer"></span>
+          <label class="ellipsis" for="clamp-toggle-jessica">
+            Jessica Johnson is a librarian and project manager from East St. Louis. During her four years as a librarian at Wright Career College in Omaha, Nebraska, she was introduced to the world of coding through HTML/CSS workshops on Code Academy and has since become an advocate for coding as a vital 21st century skill (though her own skill level is still quite basic!) She has served at the Director of Community Learning at Do Space since spring 2016, and hopes to continue to make coding a staple focus in Do Space programs.
+          </label>
+        </p>
+      </div>
+    </div>
+
   </div><!--/row-->
 
 
