adds sugar cubed projects to clubs page

--- a/clubs.html
+++ b/clubs.html
@@ -193,6 +193,7 @@
           </a>
           <p>Local Rainbows wants to show people in the LGBTQIA community that they aren't alone and that most coming out stories of the folks of the acronym have a "happy ending" to say. We also want to inform everybody the meaning of the acronym, and give a brief explanation on what the letter means, not just the word. We made this website because we want to give the LGBTQIA community a larger voice in the world.</p>
         </div>
+
         <div class="project col-xs-12 col-md-6">
           <img class="project-club-logo" src="img/clubs/library.jpeg">
           <h3>Tech Around O</h3>
@@ -203,6 +204,65 @@
           </a>
           <p>Tech Around O! is the baby of the inaugural Omaha Girls Who Code high school group. It's goal is to show the youth of Omaha a glimpse into the local tech scene. You can explore profiles of people in Omaha who are involved in tech, learn about Omaha tech hot spots, play an awesome tech game, or even read profiles on us, the creators of the site! So go and see the Tech Around O!</p>
         </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Slime Game</h3>
+          <h4 class="sub-club">Sugar Cubed - Claire</h4>
+          <a href="https://sugar-cubed-iaclairebear.herokuapp.com/index.html" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/sugar-cubed-iaclairebear.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>The Hopping Alien and Sliding Slimes</h3>
+          <h4 class="sub-club">Sugar Cubed - Anjali</h4>
+          <a href="https://sugar-cubed-puppiesanjali.herokuapp.com/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/sugar-cubed-puppiesanjali.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Arena Fight</h3>
+          <h4 class="sub-club">Sugar Cubed - Lauren</h4>
+          <a href="https://sugar-cubed-laurenr.herokuapp.com/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/sugar-cubed-lauren.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Sugar Cubed Game</h3>
+          <h4 class="sub-club">Sugar Cubed - Julie</h4>
+          <a href="https://sugar-cubed-jewlsorthman.herokuapp.com/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/sugar-cubed-julie.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Alien VS Slime</h3>
+          <h4 class="sub-club">Sugar Cubed - Chloe</h4>
+          <a href="https://sugar-cubed-ggchloee.herokuapp.com/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/sugar-cubed-chloe.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+
+
+
       </div>
     
     </div>
