adds remaining sugar cubed projects

--- a/clubs.html
+++ b/clubs.html
@@ -260,7 +260,49 @@
           <p></p>
         </div>
 
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Slime Arena</h3>
+          <h4 class="sub-club">Sugar Cubed - Apurva</h4>
+          <a href="https://sugar-cubed-bluecupcakes17.herokuapp.com/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/sugar-cubed-apurva.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
 
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Slime Armageddon</h3>
+          <h4 class="sub-club">Sugar Cubed - Natalia</h4>
+          <a href="https://sugar-cubed-pythagreontheorem.herokuapp.com/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/sugar-cubed-natalia.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Make Your Own Apocalypse</h3>
+          <h4 class="sub-club">Sugar Cubed - Nevaeh</h4>
+          <a href="https://sugar-cubed-yamikoi.herokuapp.com/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/sugar-cubed-nevaeh.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Jayfeather's Stick Save</h3>
+          <h4 class="sub-club">Sugar Cubed - Hailey</h4>
+          <a href="https://sugar-cubed-lemon82.herokuapp.com/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/sugar-cubed-hailey.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
 
 
       </div>
