adds yes 2 equality project to clubs page

--- a/clubs.html
+++ b/clubs.html
@@ -207,6 +207,17 @@
 
         <div class="project col-xs-12 col-md-6">
           <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Yes 2 Equality</h3>
+          <h4 class="sub-club">Middle School Do Space Branch - 2016-17</h4>
+          <a href="http://yes2equality.com/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/yes-2-equality.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>  
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
           <h3>Slime Game</h3>
           <h4 class="sub-club">Sugar Cubed - Claire</h4>
           <a href="https://sugar-cubed-iaclairebear.herokuapp.com/index.html" target="_blank">
@@ -214,7 +225,7 @@
             </div>
           </a>
           <p></p>
-        </div>
+        </div>      
 
         <div class="project col-xs-12 col-md-6">
           <img class="project-club-logo" src="img/clubs/library.jpeg">
