adds how to be an upstander projects to clubs page

--- a/clubs.html
+++ b/clubs.html
@@ -218,6 +218,17 @@
 
         <div class="project col-xs-12 col-md-6">
           <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>How to be an Upstander</h3>
+          <h4 class="sub-club">Middle School Do Space Branch - 2016-17</h4>
+          <a href="https://omahagirlswhocode.github.io/how-to-be-an-upstander/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/how-to-be-an-upstander.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
           <h3>Slime Game</h3>
           <h4 class="sub-club">Sugar Cubed - Claire</h4>
           <a href="https://sugar-cubed-iaclairebear.herokuapp.com/index.html" target="_blank">
