--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,7 @@
 									</ul>
                 </li>
 								<li><a href="clubs.html">Clubs</a></li>
+                <li><a href="sheql.html">SheQL - Apply Now</a></li>
 						  </ul>
 						</div>
 				  </div>
@@ -104,9 +105,9 @@
 		        </a>
 		      </div>
 		      <div class="col-xs-4">
-		        <a href="mailto:hello@omahagirlswhocode.com">
+		        <a href="mailto:omahagirlswhocode@gmail.com">
 		        	<i class="fa fa fa-envelope"></i>
-		        	<span class="social-link-text">hello@omahagirlswhocode.com</span>
+		        	<span class="social-link-text">omahagirlswhocode@gmail.com</span>
 		        </a>
 		      </div>
 	      </div>
