Correction to sheql embedded application

--- a/sheql.html
+++ b/sheql.html
@@ -115,7 +115,7 @@
                   <h4 class="modal-title">SheQL Student Application Form</h4>
                 </div>
                 <div class="modal-body">
-                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfWAJgg7FNhFDQlyYAMKuwMyW-qWgbBe9qgHO6kNe9XuDcg4Q/viewform?embedded=true" width="98%" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>" width="98%" height="500px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfWAJgg7FNhFDQlyYAMKuwMyW-qWgbBe9qgHO6kNe9XuDcg4Q/viewform?embedded=true" width="98%" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                 </div>
               </div>
             </div>
