Updates title of embedded form

--- a/sheql.html
+++ b/sheql.html
@@ -112,7 +112,7 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  <h4 class="modal-title">SheQL Student Application Form</h4>
+                  <h4 class="modal-title">SheQL Volunteer Application Form</h4>
                 </div>
                 <div class="modal-body">
                   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfWAJgg7FNhFDQlyYAMKuwMyW-qWgbBe9qgHO6kNe9XuDcg4Q/viewform?embedded=true" width="98%" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
