--- a/volunteers.html
+++ b/volunteers.html
@@ -55,7 +55,6 @@
 									</ul>
                 </li>
 								<li><a href="clubs.html">Clubs</a></li>
-                <li><a href="sheql.html">SheQL - Apply Now</a></li>
               </ul>
             </div>
           </div>
@@ -128,7 +127,7 @@
           <div class="bio-container">
             <input type="checkbox" class="clamp-toggle" id="clamp-toggle-sandi"/>
             <p class="bio ellipsis-container clamped">
-              <span class="badges badge-organizer badge-ta"></span>
+              <span class="badges badge-organizer badge-ta badge-instructor"></span>
               <label class="ellipsis" for="clamp-toggle-sandi">
                 I've long wanted to start a Girls Who Code Club in Omaha but knew I couldn't do it on my own, so when Shonna introduced me to Marvel and Lana, I felt we could build a great team with the Omaha Public Library, Interface School, and Omaha Coding Women. I had a feeling that some of the Omaha Coding Women members felt the same and figured that we'd get a few volunteers. When Omaha Coding Women got involved, they showed up in droves. I'm so proud of everyone's hard work and continuing efforts to bring this opportunity to more and more young women in Omaha, and I'm honored to be a part of it.
                 Not many of us had an opportunity to get this much exposure to technology in our younger years. Even more so, not many of us had peers to experience it with. One of the reasons I started Omaha Coding Women was because I knew very few female programmers, and I thought surely there must be more out there like me that are in need of a place to connect. The chance for these young ladies to learn and grow in a group of their peers is building such a strong foundation of support, encouragement, and teamwork. A strong team is 10x more valuable than a 10x engineer.
@@ -147,7 +146,7 @@
           <div class="bio-container">
             <input type="checkbox" class="clamp-toggle" id="clamp-toggle-eris"/>
             <p class="bio ellipsis-container clamped">
-              <span class="badges badge-organizer badge-instructor"></span>
+              <span class="badges badge-organizer badge-instructor badge-ta"></span>
               <label class="ellipsis" for="clamp-toggle-eris">
                 Eris Koleszar found her passion for coding through the game design courses at UNO whereafter she taught herself C# and the Unity engine. Once out of college, she landed a job at SkyVu Entertainment and worked on titles that have reached millions of people through Android and iOS devices. The game industry proved to be incredibly male dominated and male-centric, but thankfully, she found camaraderie in the Omaha Coding Women group. Through her connections there, she joined the amazing group of women who launched the first Omaha Girls Who Code club at the Abrahams Branch. Now she enjoys teaching the younger female generation about software development and making quirky games in the occasional game jam.
               </label>
@@ -221,7 +220,7 @@
           <div class="bio-container">
             <input type="checkbox" class="clamp-toggle" id="clamp-toggle-shannon"/>
             <p class="bio ellipsis-container clamped">
-              <span class="badges badge-instructor"></span>
+              <span class="badges badge-instructor badge-organizer"></span>
               <label class="ellipsis" for="clamp-toggle-shannon">
                 My name is Shannon. I graduated from Omaha Code School in April, and am now a Junior Consultant at Agape Red. I never thought I was the 'kind of person who codes' and had never had any work experience with tech in any of my previous careers. Last October some developers I know suggested I might like OCS and after taking the entrance exam and doing the pre-work for the course, I realized that the problem solving side of code was really satisfying to me. I also love how much possibility can be found with this skill set, and how much good technology can bring to the world, and that's why I love GWC. I wanted to get involved with this orgnaization because I never want another girl to think she isn't 'the kind of person who codes.' I want to foster the enthusiasm these girls have, and make the industry a welcoming place for them to come into and change the world.
               </label>
@@ -237,7 +236,7 @@
           <div class="bio-container">
             <input type="checkbox" class="clamp-toggle" id="clamp-toggle-bianca"/>
             <p class="bio ellipsis-container clamped">
-              <span class="badges badge-ta badge-instructor"></span>
+              <span class="badges badge-ta badge-instructor badge-organizer"></span>
               <label class="ellipsis" for="clamp-toggle-bianca">
                 I'm a UX Designer at Kiewit (yay! New job!)
                 I've always been surrounded by tech, but was never really encouraged to go into it. I went to grad school for human resources and industrial/organizational psychology, but it didn't allow me to be creative and I didn't feel fulfilled. I found Interface and learned front-end web development, which allowed me to move into a UX design position, and here I am!
