Rearrange and show extra info

--- a/clubs.html
+++ b/clubs.html
@@ -104,59 +104,9 @@
 
         <div class="club row">
           <div class="col-xs-12">
-            <h2 class="club-heading">Omaha Public Library</h2>
-            <h3 class="sub-club">Abrahams Branch</h3>
-            <h3 class="club-heading">SheQL: Intro to Databases</h3>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-
-            <img class="club-logo" src="img/clubs/library.jpeg">
-            <address>
-              5111 North 90th Street<br>
-              Omaha, NE 68134
-            </address>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Saturdays, 9:15am-1:00pm</h4>
-            <p>9th-12th grade</p>
-            <p><span>Instructors:</span>Wendy Holley and Shannon Jackson</p>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Not Accepting Applications</h4>
-            <p><span>Session Starts:</span> Saturday, June 17</p>
-            <p><span>Session Ends:</span> Saturday, August 19</p>
-          </div>
-        </div>
-
-        <div class="club row">
-          <div class="col-xs-12">
-            <h2 class="club-heading">Omaha Public Library</h2>
-            <h3 class="sub-club">Abrahams Branch</h3>
-            <h3 class="club-heading">HTM&#60elle&#62: Intro to HTML/CSS</h3>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-
-            <img class="club-logo" src="img/clubs/library.jpeg">
-            <address>
-              5111 North 90th Street<br>
-              Omaha, NE 68134
-            </address>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Saturday mornings</h4>
-            <p>6th-12th grade</p>
-            <p><span>Instructor:</span>Sandi Barr</p>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Accepting Applications Soon!</h4>
-            <p><span>Session Starts:</span> September</p>
-          </div>
-        </div>
-
-        <div class="club row">
-          <div class="col-xs-12">
             <h2 class="club-heading">Do Space</h2>
             <h3 class="sub-club">Technology Library</h3>
+            <h4 class="sub-club">Girls Who Code Club</h4>
           </div>
           <div class="col-xs-12 col-sm-4">
 
@@ -169,7 +119,7 @@
           <div class="col-xs-12 col-sm-4">
             <h4>Sundays 2-5pm</h4>
             <p>6th-8th grade</p>
-            <p><span>Instructors:</span> Alexandra Millatmal</p>
+            <p><span>Instructor:</span> Alexandra Millatmal</p>
           </div>
           <div class="col-xs-12 col-sm-4">
             <h4>Accepting Applications!</h4>
@@ -179,6 +129,58 @@
             <p><span>Session Ends:</span> Sunday, December 17</p>
           </div>
         </div>
+
+        <div class="club row">
+          <div class="col-xs-12">
+            <h2 class="club-heading">Omaha Public Library</h2>
+            <h3 class="sub-club">Abrahams Branch</h3>
+            <h4 class="sub-club">SheQL: Intro to Databases</h4>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+
+            <img class="club-logo" src="img/clubs/library.jpeg">
+            <address>
+              5111 North 90th Street<br>
+              Omaha, NE 68134
+            </address>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <h4>Saturdays, 9:15am-1:00pm</h4>
+            <p>9th-12th grade</p>
+            <p><span>Instructors:</span> Wendy Holley and Shannon Jackson</p>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <h4>Not Accepting Applications</h4>
+            <p><span>Session Starts:</span> Saturday, June 17</p>
+            <p><span>Session Ends:</span> Saturday, August 19</p>
+          </div>
+        </div>
+
+        <div class="club row">
+          <div class="col-xs-12">
+            <h2 class="club-heading">Omaha Public Library</h2>
+            <h3 class="sub-club">Abrahams Branch</h3>
+            <h4 class="sub-club">HTM&#60elle&#62: Intro to HTML/CSS</h4>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+
+            <img class="club-logo" src="img/clubs/library.jpeg">
+            <address>
+              5111 North 90th Street<br>
+              Omaha, NE 68134
+            </address>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <h4>Saturday mornings</h4>
+            <p>6th-12th grade</p>
+            <p><span>Instructor:</span> Sandi Barr</p>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <h4>Accepting Applications Soon!</h4>
+            <p><span>Session Starts:</span> September</p>
+          </div>
+        </div>
+
 
       </div><!-- CLUBS LIST -->
 
