Adds HTMelle to website

--- a/clubs.html
+++ b/clubs.html
@@ -102,6 +102,35 @@
       <br>
       <div class="clubs-list">
 
+
+        <div class="club row">
+          <div class="col-xs-12">
+            <h2 class="club-heading">Omaha Public Library</h2>
+            <h3 class="sub-club">Abrahams Branch</h3>
+            <h4 class="sub-club">HTM&#60elle&#62: Intro to HTML/CSS</h4>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+
+            <img class="club-logo" src="img/clubs/library.jpeg">
+            <address>
+              5111 North 90th Street<br>
+              Omaha, NE 68134
+            </address>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <h4>Saturdays 9:30am-12:30pm</h4>
+            <p>6th-12th grade</p>
+            <p><span>Instructor:</span> Sandi Barr</p>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <h4>Accepting Applications!</h4>
+            <a type="button" class="btn btn-default" href="https://goo.gl/forms/V9qQVIo2qPxGSadM2" target="_blank">Apply Now</a>
+            <p><span>Applications Due:</span> Friday, September 1</p>
+            <p><span>Session Starts:</span> Saturday, September 9</p>
+            <p><span>Session Ends:</span> Saturday, September 30</p>
+          </div>
+        </div>
+
         <div class="club row">
           <div class="col-xs-12">
             <h2 class="club-heading">Do Space</h2>
@@ -122,62 +151,9 @@
             <p><span>Instructor:</span> Alexandra Millatmal</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <h4>Accepting Applications!</h4>
-            <a type="button" class="btn btn-default" href="http://www.dospace.org/events/girls-who-code" target="_blank">Apply Now</a>
-            <p><span>Applications Due:</span> Friday, August 11</p>
+            <h4>Not Accepting Applications</h4>
             <p><span>Session Starts:</span> Sunday, September 3</p>
             <p><span>Session Ends:</span> Sunday, December 17</p>
-          </div>
-        </div>
-
-        <div class="club row">
-          <div class="col-xs-12">
-            <h2 class="club-heading">Omaha Public Library</h2>
-            <h3 class="sub-club">Abrahams Branch</h3>
-            <h4 class="sub-club">SheQL: Intro to Databases</h4>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-
-            <img class="club-logo" src="img/clubs/library.jpeg">
-            <address>
-              5111 North 90th Street<br>
-              Omaha, NE 68134
-            </address>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Saturdays, 9:15am-1:00pm</h4>
-            <p>9th-12th grade</p>
-            <p><span>Instructors:</span> Wendy Holley and Shannon Jackson</p>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Not Accepting Applications</h4>
-            <p><span>Session Starts:</span> Saturday, June 17</p>
-            <p><span>Session Ends:</span> Saturday, August 19</p>
-          </div>
-        </div>
-
-        <div class="club row">
-          <div class="col-xs-12">
-            <h2 class="club-heading">Omaha Public Library</h2>
-            <h3 class="sub-club">Abrahams Branch</h3>
-            <h4 class="sub-club">HTM&#60elle&#62: Intro to HTML/CSS</h4>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-
-            <img class="club-logo" src="img/clubs/library.jpeg">
-            <address>
-              5111 North 90th Street<br>
-              Omaha, NE 68134
-            </address>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Saturday mornings</h4>
-            <p>6th-12th grade</p>
-            <p><span>Instructor:</span> Sandi Barr</p>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Accepting Applications Soon!</h4>
-            <p><span>Session Starts:</span> September</p>
           </div>
         </div>
 
