Adds SheQL projects and removes link to application for htmelle

--- a/clubs.html
+++ b/clubs.html
@@ -123,9 +123,7 @@
             <p><span>Instructor:</span> Sandi Barr</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <h4>Accepting Applications!</h4>
-            <a type="button" class="btn btn-default" href="https://goo.gl/forms/V9qQVIo2qPxGSadM2" target="_blank">Apply Now</a>
-            <p><span>Applications Due:</span> Friday, September 1</p>
+            <h4>Not Accepting Applications</h4>
             <p><span>Session Starts:</span> Saturday, September 9</p>
             <p><span>Session Ends:</span> Saturday, September 30</p>
           </div>
@@ -303,6 +301,106 @@
           <h4 class="sub-club">Sugar Cubed - Hailey</h4>
           <a href="https://sugar-cubed-lemon82.herokuapp.com/" target="_blank">
             <div class="project-img" style="background-image:url('img/clubs/projects/sugar-cubed-hailey.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Scoop 'N Smiles</h3>
+          <h4 class="sub-club">SheQL - April &amp; Paige</h4>
+          <a href="https://scoop-n-smiles.herokuapp.com/graduation" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/april_paige_scoop_n_smiles.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>We-b-3</h3>
+          <h4 class="sub-club">SheQL - Emma</h4>
+          <a href="https://we-b-3.herokuapp.com/graduation" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/emma_we-b-3.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Catnips</h3>
+          <h4 class="sub-club">SheQL - Hailey</h4>
+          <a href="https://catnips.herokuapp.com/graduation" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/hailey_catnips.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Anti Social</h3>
+          <h4 class="sub-club">SheQL - Julie</h4>
+          <a href="https://julie-anti-social.herokuapp.com/graduation" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/julie_anti_social.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Find Food</h3>
+          <h4 class="sub-club">SheQL - Lauren</h4>
+          <a href="https://lauren-find-food.herokuapp.com/graduation" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/lauren_find_food.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Writer's Hub</h3>
+          <h4 class="sub-club">SheQL - Natalia</h4>
+          <a href="https://pythagreontheorem-writers-hub.herokuapp.com/graduation" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/natalia_writers_hub.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Translation App</h3>
+          <h4 class="sub-club">SheQL - Ramya</h4>
+          <a href="https://ramya-translation-app.herokuapp.com/graduation" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/ramya_translation_app.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>NHS Hours</h3>
+          <h4 class="sub-club">SheQL - Tera &amp; Grace</h4>
+          <a href="https://nhs-hours.herokuapp.com/graduation" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/tera_grace_nhs_hours.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Travel Onward</h3>
+          <h4 class="sub-club">SheQL - Victoria</h4>
+          <a href="https://travel-onward.herokuapp.com/graduation" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/victoria_travel_onward.png')">
             </div>
           </a>
           <p></p>
