Adds susan to volunteers page

--- a/volunteers.html
+++ b/volunteers.html
@@ -508,6 +508,23 @@
       </div>
     </div>
 
+
+    <div class="col-sm-6 col-lg-3">
+      <div class="text-center">
+        <img src="img/volunteers/default.png" width="140" height="140" />
+        <h3>Susan Tussing</h3>
+      </div>
+      <div class="bio-container">
+        <input type="checkbox" class="clamp-toggle" id="clamp-toggle-susan-tussing"/>
+        <p class="bio ellipsis-container clamped">
+          <span class="badges badge-ta"></span>
+          <label class="ellipsis" for="clamp-toggle-susan-tussing">
+            I started coding as a teenager in the dark ages of the 1990s, but took a detour through, uh... several other careers before winding up a web developer with Mutual of Omaha.  On its worst days, still way better than being a tax accountant.  In my free time, I play a staggering amount of Minecraft, but if you squint, I can pass for a real adult.  When I started with Girls Who Code, I thought it was important but that the prospect of working with kids was unsettling and... maybe vaguely alarming?  I was amazed at the girls in this program and how smart and creative and caring they are, and I have so much hope for the future they're going to be a part of.
+          </label>
+        </p>
+      </div>
+    </div>
+
   </div><!--/row-->
 
 
