Adds htmelle masters to web page

--- a/clubs.html
+++ b/clubs.html
@@ -107,7 +107,7 @@
           <div class="col-xs-12">
             <h2 class="club-heading">Omaha Public Library</h2>
             <h3 class="sub-club">Abrahams Branch</h3>
-            <h4 class="sub-club">HTM&#60elle&#62: Intro to HTML/CSS</h4>
+            <h4 class="sub-club">htm&#60elle&#47;&#62 masters: Intermediate Web Development</h4>
           </div>
           <div class="col-xs-12 col-sm-4">
 
@@ -120,12 +120,14 @@
           <div class="col-xs-12 col-sm-4">
             <h4>Saturdays 9:30am-12:30pm</h4>
             <p>6th-12th grade</p>
-            <p><span>Instructor:</span> Sandi Barr</p>
+            <p><span>Instructor:</span> Wendy Holley</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <h4>Not Accepting Applications</h4>
-            <p><span>Session Starts:</span> Saturday, September 9</p>
-            <p><span>Session Ends:</span> Saturday, September 30</p>
+              <h4>Accepting Applications!</h4>
+             <a type="button" class="btn btn-default" href="https://goo.gl/forms/BQdwamcfEycF8eo13" target="_blank">Apply Now</a>
+             <p><span>Applications Due:</span> Thursday, October 19</p>
+             <p><span>Session Starts:</span> Saturday, October 21</p>
+            <p><span>Session Ends:</span> Saturday, February 10</p>
           </div>
         </div>
 
