Upates volunteers page to add new roles for Cara and Bianca

--- a/volunteers.html
+++ b/volunteers.html
@@ -236,7 +236,7 @@
           <div class="bio-container">
             <input type="checkbox" class="clamp-toggle" id="clamp-toggle-bianca"/>
             <p class="bio ellipsis-container clamped">
-              <span class="badges badge-ta badge-instructor badge-organizer"></span>
+              <span class="badges badge-ta badge-instructor badge-organizer badge-speaker"></span>
               <label class="ellipsis" for="clamp-toggle-bianca">
                 I'm a UX Designer at Kiewit (yay! New job!)
                 I've always been surrounded by tech, but was never really encouraged to go into it. I went to grad school for human resources and industrial/organizational psychology, but it didn't allow me to be creative and I didn't feel fulfilled. I found Interface and learned front-end web development, which allowed me to move into a UX design position, and here I am!
@@ -316,7 +316,7 @@
           <div class="bio-container">
             <input type="checkbox" class="clamp-toggle" id="clamp-toggle-cara"/>
             <p class="bio ellipsis-container clamped">
-              <span class="badges badge-ta"></span>
+              <span class="badges badge-ta badge-speaker"></span>
               <label class="ellipsis" for="clamp-toggle-cara">
                 Cara is a web developer, designer, and illustrator from Omaha, Nebraska. She has been drawing since she can remember and coding (terrible) websites since she was twelve, but decided to pursue a career in graphic design when she went to college. After receiving a Bachelor of Fine Arts from the University of Nebraska-Lincoln in 2011, she joined the Omaha Code School inaugural class in early 2014 to add more web development to her skill set.
 
